Made changes to dropdown

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">AboutUS</a>
+            <a class="nav-link" href="#">About Us</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -31,9 +31,9 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#">OurGoals</a>
-              <a class="dropdown-item" href="#">Read about our goals</a>
+              <a class="dropdown-item" href="#">Read About Our Goals</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Somethings else here</a>
+              <a class="dropdown-item" href="#">Our Vision</a>
             </div>
           </li>
           <li class="nav-item">
